--- a/study/Web Browser JavaScript/code/browser.html
+++ b/study/Web Browser JavaScript/code/browser.html
@@ -8,6 +8,15 @@
     <script src="./js/global.js"></script>
   </head>
   <body>
-    <h1>먼데 안되냐?</h1>
+    <input type="button" value="prompt" onclick="func_prompt()" />
+    <script>
+      function func_prompt() {
+        if (prompt("id?") === "egoing") {
+          alert("welcome");
+        } else {
+          alert("fail");
+        }
+      }
+    </script>
   </body>
 </html>
