--- a/study/Web Browser JavaScript/code/browser.html
+++ b/study/Web Browser JavaScript/code/browser.html
@@ -5,19 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./js/global.js"></script>
+    <script src="./js/getElement.js" async></script>
   </head>
   <body>
-    <input type="button" value="prompt" onclick="func_prompt()" />
-
-    <script>
-      function func_prompt() {
-        if (prompt("id?") === "egoing") {
-          alert("welcome");
-        } else {
-          alert("fail");
-        }
-      }
-    </script>
+    <ul>
+      <li>HTML</li>
+      <li class="active">CSS</li>
+      <li class="active">JavaScript</li>
+    </ul>
   </body>
 </html>
